<resources>
    <string name="app_name">Day Trip Planner</string>
    <string name="destination">Destination</string>
    <string name="food">Nearby Food</string>
    <string name="num_food_results">Number of Results (%1$d):</string>
    <string name="num_attraction_results">Number of Results (%1$d):</string>
    <string name="attractions">Nearby Attractions</string>
    <string name="go">GO</string>
    <string name="destination_hint">Location</string>
    <string name="search_results">Search Results</string>
    <string name="cancel">Cancel</string>
    <string name="phone_icon">[Phone Icon]</string>
    <string name="url_icon">[URL Icon]</string>
    <string name="title_activity_maps">Day Trip Planner</string>
    <string name="view_nearby">View Nearby</string>
    <string name="invalid_address">View Error: Invalid address</string>
    <string name="no_results">There are no results.</string>
    <string name="yelp_fail">Failed to retrieve Yelp details</string>
    <string name="no_food">No food entries found nearby.  </string>
    <string name="no_attr">No attraction entries found nearby.  </string>
    <string name="no_metro">No metro station found nearby.</string>
    <string name="food_error">Error retrieving food results.\n</string>
    <string name="attr_error">Error retrieving attraction results.\n</string>
    <string name="metro_error">Error retrieving metro result.</string>

    <string-array name="cuisine_choices">
        <item>Select Food Type</item>
        <item>Delis</item>
        <item>Diners</item>
        <item>Bakeries</item>
        <item>Pizza</item>
        <item>Desserts</item>
    </string-array>

    <string-array name="attraction_choices">
        <item>Select Attraction Type</item>
        <item>Parks</item>
        <item>Arcades</item>
        <item>Cinema</item>
        <item>Museums</item>
        <item>Farms</item>
    </string-array>

</resources>
